--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,5 @@ lib_deps =
 	arduino-libraries/Ethernet@^2.0.0
 	bblanchon/ArduinoJson@^6.18.5
 	janelia-arduino/Vector@^1.2.2
+	milesburton/DallasTemperature@^3.9.1
 build_flags = -fexceptions
