--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,19 @@ lib_deps =
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
 build_flags = -fexceptions
+[env:ATmega2560_Linux]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+upload_port = /dev/ttyACM0
+monitor_speed = 9600
+lib_deps = 
+	orgua/OneWireHub@^2.2.1
+	arduino-libraries/Ethernet@^2.0.0
+	bblanchon/ArduinoJson@^6.18.5
+	janelia-arduino/Vector@^1.2.2
+	milesburton/DallasTemperature@^3.9.1
+build_flags = -fexceptions
+
+
+
