--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,9 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.5
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
+	pstolarz/OneWireNg@^0.10.0
 build_flags = -fexceptions
+
 [env:ATmega2560_Linux]
 platform = atmelavr
 board = megaatmega2560
@@ -33,7 +35,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.5
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
+	pstolarz/OneWireNg@^0.10.0
 build_flags = -fexceptions
-
-
-
