--- a/platformio.ini
+++ b/platformio.ini
@@ -36,4 +36,5 @@ lib_deps =
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
 	pstolarz/OneWireNg@^0.10.0
+	etlcpp/Embedded Template Library@^19.3.5
 build_flags = -fexceptions
