--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_deps =
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
 	pstolarz/OneWireNg@^0.10.0
-
+	paulstoffregen/OneWire@^2.3.6
 
 [env:ATmega2560_Linux]
 platform = atmelavr
@@ -35,5 +35,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.5
 	janelia-arduino/Vector@^1.2.2
 	milesburton/DallasTemperature@^3.9.1
-	pstolarz/OneWireNg@^0.10.0
 	etlcpp/Embedded Template Library@^19.3.5
+	paulstoffregen/OneWire@^2.3.6
